--- a/docs/assets/css/page.css
+++ b/docs/assets/css/page.css
@@ -30,3 +30,14 @@ a{
 .content{
     padding:0 20px;
 }
+
+.footer{
+    position: absolute;
+    bottom: 10px;
+    text-align: center;
+    width: 100%;
+}
+
+.footer p{
+    color: #333;
+}
