--- a/docs/assets/css/page.css
+++ b/docs/assets/css/page.css
@@ -19,7 +19,12 @@ a{
     background-size: cover;
     background-position: 50% 40%;
     font-size: 48px;
+    padding: 3% 20px;
+}
+
+.markdown-body p{
     padding: 0 20px;
+    font-size: 25px;
 }
 
 .sub-title{
