--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
     <meta name="author" content="Norton.Li" />
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }} - @Norton.Li</title>
     <link rel="stylesheet" href="/assets/css/page.css" type="text/css" media="screen, projection" />
 </head>
 
@@ -19,10 +19,12 @@
 
     <div class="site">
         <div class="header">
-            <a href="/">Home</a>
-            <a href="http://www.coolde.cn">Coolde</a>
+            <p>Blog</p>
+            <div class="sub-title">2017 精进</div>
         </div>
+
         {{ content }}
+
         <div class="footer">
             <p>
                 <a href="https://github.com/nortonlee/">github.com/nortonlee</a><br />
