--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,33 @@
----
-layout: default
----
-<div id="post">
-{{ content }}
-</div>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 
-<div id="related">
-  <h2>Related Posts</h2>
-  <ul class="posts">
-    {% for post in site.related_posts limit:3 %}
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
+  <meta name="author" content="Norton.Li" />
+  <title>{{ page.title }} - @Norton.Li</title>
+  <link rel="stylesheet" href="/assets/css/page.css" type="text/css" media="screen, projection" />
+</head>
+
+<body>
+  <div id="post">
+    {{ content }}
+  </div>
+
+  <div id="related">
+    <h2>Related Posts</h2>
+    <ul class="related-post">
+      {% for post in site.related_posts limit:3 %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+      {% endfor %}
+    </ul>
+  </div>
+
+  <div class="footer">
+    <p>
+      <a href="https://github.com/nortonlee/">github.com/nortonlee</a><br />
+      <a href="mailto:lizard@yeah.net">lizard@yeah.net</a><br />
+    </p>
+    <p>Copyright ©2015-2017 by Norton Li</p>
+  </div>
+</body>
