--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -4,8 +4,6 @@
 }
 body{
     background-color: white;
-    font: 13.34px helvetica, arial, clean, sans-serif;
-    text-align: center;
 }
 
 a{
@@ -20,12 +18,11 @@ a{
 .site {
     font-size: 110%;
     text-align: justify;
-    width: 80%;
-    margin: 3em auto 2em auto;
+    width: 100%;
     line-height: 1.5em;
 }
 
-.item-header{
+.header{
     background:url(../images/home-bg.jpg);
     color: #fff;
     width:100%;
@@ -34,12 +31,37 @@ a{
     background-size: cover;
     background-position: 50% 40%;
     font-size: 48px;
-    padding: 3% 20px;
+    text-align: center;
+}
+
+.header p{
+    padding-top: 1em;
 }
 
 .sub-title{
     font-size:18px;
+    padding: 20px;
+}
+
+ul.posts{
+    list-style-type: none;
+    margin-bottom: 2em;
+    margin-top:2em;
+}
+
+#post{
     padding: 0 20px;
+    width: 100%;
+}
+
+#post p{
+    padding: 10px 0;
+}
+
+ul.posts li {
+    line-height: 1.75em;
+    padding: 0 20px;
+    font-size: 18px;
 }
 
 .markdown-body h3{
@@ -55,12 +77,25 @@ a{
     padding:0 20px;
 }
 
+#related{
+    padding: 0 20px;
+}
+
+#related .related-post{
+    list-style-type: none;
+    margin-bottom: 2em;
+}
+
+#related .related-post li {
+    line-height: 1.75em;
+    padding: 0 20px;
+}
+
 .footer{
     text-align: center;
     width: 100%;
-    margin-top: 2em;
-    border-top: 4px solid #eee;
-    overflow: hidden;
+    border-top: 2px solid #eee;
+    margin: 2em 0;
 }
 
 .footer p{
