update post assets path

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
   <meta name="author" content="Norton.Li" />
   <title>{{ page.title }} - @Norton.Li</title>
-  <link rel="stylesheet" href="/assets/css/page.css" type="text/css" media="screen, projection" />
+  <link rel="stylesheet" href="../../../assets/css/page.css" type="text/css" media="screen, projection" />
 </head>
 
 <body>
