--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,24 +10,26 @@
 </head>
 
 <body>
-  <div id="post">
-    {{ content }}
-  </div>
+  <div class="post-content">
+    <div id="post">
+      {{ content }}
+    </div>
 
-  <div id="related">
-    <h2>Related Posts</h2>
-    <ul class="related-post">
-      {% for post in site.related_posts limit:3 %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-      {% endfor %}
-    </ul>
-  </div>
+    <div id="related">
+      <h2>Latest Post</h2>
+      <ul class="related-post">
+        {% for post in site.related_posts limit:3 %}
+        <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="articles{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+      </ul>
+    </div>
 
-  <div class="footer">
-    <p>
-      <a href="https://github.com/nortonlee/">github.com/nortonlee</a><br />
-      <a href="mailto:lizard@yeah.net">lizard@yeah.net</a><br />
-    </p>
-    <p>Copyright ©2015-2017 by Norton Li</p>
+    <div class="footer">
+      <p>
+        <a href="https://github.com/nortonlee/">github.com/nortonlee</a><br />
+        <a href="mailto:lizard@yeah.net">lizard@yeah.net</a><br />
+      </p>
+      <p>Copyright ©2015-2017 by Norton Li</p>
+    </div>
   </div>
 </body>
