--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@
       <h2>Latest Post</h2>
       <ul class="related-post">
         {% for post in site.related_posts limit:3 %}
-        <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="articles{{ post.url }}">{{ post.title }}</a></li>
+        <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="/articles{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
       </ul>
     </div>
