--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,6 @@
-{% include header.html %}
+---
+layout: default
+---
 
 <div class="post-content">
   <div id="post">
@@ -14,5 +16,3 @@
     </ul>
   </div>
 </div>
-
-{% include footer.html %}
