update footer update markdown post

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,4 @@
 <div class="footer">
-    <p>
-        <a href="https://github.com/nortonlee/">github.com/nortonlee</a><br />
-    </p>
     <p>Copyright ©2015-2017 by Norton Li</p>
+    <p><a href="https://github.com/nortonlee/articles">Based on GitHub</a></p>
 </div>
