add code highlight adjust style

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,15 @@
 <div class="header">
     <div class="header-content">
-        <p><a href="/articles/">Norton's Blog</a></p>
+        <p><a class="sub-home" href="/articles/">Norton.Li|李驰</a></p>
         <div class="sub-title">2017 精进</div>
+        <ul>
+            <li><a class="ico-home" href="/" ><i class="fa fa-home"></a></i>
+            </li>
+            <li><a class="ico-wechat" href="http://www.coolde.cn/img/wx.png" target="_blank"><i class="fa fa-wechat"></a></i>
+            </li>
+            <li><a class="ico-weibo" href="http://weibo.com/345957657"><i class="fa fa-weibo"></i></a></li>
+            <li><a class="ico-github" href="https://github.com/nortonlee/articles"><i class="fa fa-github"></a></i>
+            </li>
+        </ul>
     </div>
 </div>
