--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -7,6 +7,8 @@
     <meta name="author" content="Norton.Li" />
     <title>{{ page.title }} - @Norton.Li</title>
     <link rel="stylesheet" href="{{ BASE_PATH }}/articles/assets/css/page.css" type="text/css" media="screen, projection" />
+    <link rel="stylesheet" href="{{ BASE_PATH }}/articles/assets/css/rouge.css" type="text/css" media="screen, projection" />
+    <link rel="stylesheet" href="{{ BASE_PATH }}/articles/assets/css/font-awesome.min.css" type="text/css" media="screen, projection" />
 </head>
 
 <body>
