add header background image change

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{{ BASE_PATH }}/articles/assets/css/page.css" type="text/css" media="screen, projection" />
     <link rel="stylesheet" href="{{ BASE_PATH }}/articles/assets/css/rouge.css" type="text/css" media="screen, projection" />
     <link rel="stylesheet" href="{{ BASE_PATH }}/articles/assets/css/font-awesome.min.css" type="text/css" media="screen, projection" />
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body>
