--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,10 @@
+<!--<script src="https://nortonlee.github.io/assets/js/index.js"></script>-->
 <div class="header">
     <div class="header-content">
         <p><a class="sub-home" href="/articles/">Norton.Li|李驰</a></p>
         <div class="sub-title">2017 精进</div>
         <ul>
-            <li><a class="ico-home" href="/" ><i class="fa fa-home"></a></i>
+            <li><a class="ico-home" href="/"><i class="fa fa-home"></a></i>
             </li>
             <li><a class="ico-wechat" href="http://www.coolde.cn/img/wx.png" target="_blank"><i class="fa fa-wechat"></a></i>
             </li>
@@ -11,5 +12,7 @@
             <li><a class="ico-github" href="https://github.com/nortonlee/articles"><i class="fa fa-github"></a></i>
             </li>
         </ul>
+        <span id="img_placer"></span>
     </div>
 </div>
+<script src="{{ BASE_PATH }}/articles/assets/js/home.js"></script>
