add post category

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,8 @@
             </li>
             <li><a class="ico-wechat" href="http://www.coolde.cn/img/wx.png" target="_blank"><i class="fa fa-wechat"></a></i>
             </li>
-            <li><a class="ico-weibo" href="http://weibo.com/345957657"><i class="fa fa-weibo"></i></a></li>
-            <li><a class="ico-github" href="https://github.com/nortonlee/articles"><i class="fa fa-github"></a></i>
+            <li><a class="ico-weibo" href="http://www.weibo.com/345957657"><i class="fa fa-weibo"></i></a></li>
+            <li><a class="ico-github" href="https://www.github.com/nortonlee/"><i class="fa fa-github"></a></i>
             </li>
         </ul>
         <span id="img_placer"></span>
