--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
     <h2>Latest Post</h2>
     <ul class="related-post">
       {% for post in site.related_posts limit:3 %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="/articles{{ post.url }}">{{ post.title }}</a></li>
+      <li><span>{{ post.date | date: "%F" }}</span> &raquo; <a href="/articles{{ post.url }}">{{ post.title }}</a></li>
       {% endfor %}
     </ul>
   </div>
