add wechat share image

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,7 @@
-<!--<script src="https://nortonlee.github.io/assets/js/index.js"></script>-->
+<script src="{{ BASE_PATH }}/articles/assets/js/shareWX.js"></script>
+<div id='wx_logo' style='margin:0 auto;display:none;'>
+    <img src='{{ BASE_PATH }}/assets/images/logo.png' />
+</div>
 <div class="header">
     <div class="header-content">
         <p><a class="sub-home" href="/articles/">Norton.Li|李驰</a></p>
