--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
   </div>
 </div>
 <!--PC和WAP自适应版-->
-<div id="SOHUCS" ></div> 
+<div id="SOHUCS" sid="{{page.title}}"></div> 
 <script type="text/javascript"> 
 (function(){ 
 var appid = 'cysY47hMv'; 
