--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <ul>
             <li><a class="ico-home" href="/"><i class="fa fa-home"></a></i>
             </li>
-            <li><a class="ico-wechat" href="{{ BASE_PATH }}/assets/images/wx.png" target="_blank"><i class="fa fa-wechat"></a></i>
+            <li><a class="ico-wechat" href="{{ BASE_PATH }}/articles/assets/images/wx.png" target="_blank"><i class="fa fa-wechat"></a></i>
             </li>
             <li><a class="ico-weibo" href="http://www.weibo.com/345957657"><i class="fa fa-weibo"></i></a></li>
             <li><a class="ico-github" href="https://www.github.com/nortonlee/"><i class="fa fa-github"></a></i>
