--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -8,12 +8,22 @@
     <title>{{ page.title }} - @Norton.Li</title>
     <link rel="stylesheet" href="{{ BASE_PATH }}/articles/assets/css/page.css" type="text/css" media="screen, projection" />
     <link rel="stylesheet" href="{{ BASE_PATH }}/articles/assets/css/rouge.css" type="text/css" media="screen, projection" />
-    <link rel="stylesheet" href="{{ BASE_PATH }}/articles/assets/css/font-awesome.min.css" type="text/css" media="screen, projection" />
+    <link rel="stylesheet" href="{{ BASE_PATH }}/articles/assets/css/font-awesome.min.css" type="text/css" media="screen, projection"/>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script>
+        var _hmt = _hmt || [];
+        (function () {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?1a6df2e9fe5e42319ae9746603c45f5f";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
 </head>
 
 <body>
-    {% include header.html %}
+    {% include header.html %} 
     {{ content }}
     {% include footer.html %}
 </body>
