--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -238,3 +238,15 @@ blockquote {
     -moz-box-shadow: inset 0 1px 10px #eee, 0 1px 0 #eee, 0 -1px 0 #eee;
     box-shadow: inset 0 1px 10px #eee, 0 1px 0 #eee, 0 -1px 0 #eee;
 }
+
+.tags{
+    line-height: 2em;
+    padding: 2em;
+}
+.tags span{
+    border-radius: 15px;
+    background: #3399FF;
+    padding: 5px 20px;
+    color: #fff;
+    font-size: .8em;
+}
