--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <div class="footer">
-    <p>Copyright ©2015-2017 by Norton Li</p>
+    <p>Copyright ©2015-<script>document.write((new Date().getFullYear()))</script> by <a target="_blank" href="https://github.com/nortonlee/">Norton Li</a></p>
 </div>
