--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -5,6 +5,11 @@
 body{
     background-color: white;
     text-align: center;
+    -moz-user-select: none; 
+    -webkit-user-select: none; 
+    -ms-user-select: none; 
+    -khtml-user-select: none; 
+    user-select: none; 
 }
 
 a{
