update wx_logo image

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<div id='wx_logo'>
-    <img width="0" height="0" src='{{ BASE_PATH }}/assets/images/logo.jpg' />
+<div id='wx_logo' style="height:0;width:100%;">
+    <img style="height:0;width:0;" src='{{ BASE_PATH }}/assets/images/logo.jpg' />
 </div>
 <div class="header">
     <div class="header-content">
