--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -72,6 +72,18 @@ ul.posts li > a{
     background-color:rgba(0,0,0,0.3);
     width:100%;
     min-height: 6em;
+    z-index: 1;
+    position: absolute;
+}
+
+.header-video video{
+    object-fit: cover;
+    min-width: 100%;
+    position: absolute;
+    top: 0;
+    z-index: 0 !important;
+    left: 0;
+    height: 6em;
 }
 
 .header .sub-home,
