添加动态背景视频

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,12 +2,7 @@
     <img style="height:0;width:0;" src='{{ BASE_PATH }}/assets/images/logo.jpg' />
 </div>
 <div class="header">
-    <div class="header-video">
-        <video autoplay loop style="background-color: black;filter: blur(5px);">
-            <source src="{{ BASE_PATH }}/articles/assets/video/video_bg.webm" type="video/webm">
-            <source src="{{ BASE_PATH }}/articles/assets/video/video_bg.mp4" type="video/mp4">
-        </video>
-    </div>
+    <div class="header-video"></div>
     <div class="header-content">
         <p><a class="sub-home" href="/articles/">Norton.Li|李驰</a></p>
         <div class="sub-title">2017 精进</div>
@@ -23,4 +18,4 @@
         <span id="img_placer"></span>
     </div>
 </div>
-<!-- <script src="{{ BASE_PATH }}/articles/assets/js/home.js"></script> -->
+<script src="{{ BASE_PATH }}/articles/assets/js/home.js"></script>
