add description meta

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -5,6 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
     <meta name="author" content="Norton.Li" />
+    <meta name="description" content="The page for me write articles" />
     <title>{{ page.title }} - @Norton.Li</title>
     <link rel="stylesheet" href="{{ BASE_PATH }}/articles/assets/css/page.css" type="text/css" media="screen, projection" />
     <link rel="stylesheet" href="{{ BASE_PATH }}/articles/assets/css/rouge.css" type="text/css" media="screen, projection" />
