添加手机端提醒

--- a/_layouts/pptLayout.html
+++ b/_layouts/pptLayout.html
@@ -31,6 +31,7 @@
 </head>
 
 <body>
+    <div class="pc">PC端体验效果更佳哦</div>
     {{ content }}
     <script src="{{ BASE_PATH }}/articles/assets/lib/js/head.min.js"></script>
     <script src="{{ BASE_PATH }}/articles/assets/js/reveal.js"></script>
