--- a/assets/css/ppt.css
+++ b/assets/css/ppt.css
@@ -1,6 +1,7 @@
 .slides{
     width:90% !important;
     margin-top:1em !important;
+    transform: none !important;
 }
 .logo img{
     height:300px;
@@ -35,4 +36,26 @@
 }
 table{
     font-size:20px !important;
+}
+.pc{
+    display: none;
+}
+@media screen and (max-width:736px){
+    .slides{
+        top:50% !important;
+        left:50% !important;
+        right: auto !important;
+        bottom:auto !important;
+        transform: translate(-50%, -50%) scale(0.8) !important;
+        font-size: 80% !important;
+    }
+    .pc{
+        padding: 20px;
+        display: block;
+        background: transparent;
+        position: fixed;
+        top:.5em;
+        color: #ccc;
+        z-index: 1000;
+    }
 }
