open slide number

--- a/_layouts/pptLayout.html
+++ b/_layouts/pptLayout.html
@@ -70,7 +70,7 @@
         Reveal.initialize({
             controls: true,
             progress: true,
-            slideNumber: false,
+            slideNumber: true,
             history: false,
             keyboard: true,
             overview: true,
