上线打赏功能

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,8 @@ layout: default
    {% endfor %}
   </div>
 
+  {% include reward.html %}
+
   <div id="related">
     <h2>Latest Post</h2>
     <ul class="related-post">
