--- a/_includes/reward.html
+++ b/_includes/reward.html
@@ -7,5 +7,5 @@
     <p>您的支持将是我最大的动力！</p>
 </div>
 <div id="QRBox" class="pos-f left-100">
-    <div id="MainBox"></div>
+    <div id="MainBox"><a class="pay-url"></a></div>
 </div>
