--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -237,6 +237,12 @@ ul.posts li {
     .post-content h1{
         font-size: 20px;
     }
+    
+    .pay-url{
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 blockquote {
