--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <div class="header-video"></div>
     <div class="header-content">
         <p><a class="sub-home" href="/articles/">Norton.Li|李驰</a></p>
-        <div class="sub-title">稳住 我们能赢</div>
+        <div class="sub-title">wěn住 我们能赢</div>
         <ul>
             <li><a class="ico-home" href="/"><i class="fa fa-home"></a></i>
             </li>
