--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
 <div class="footer">
+    <p><a href="http://www.beian.miit.gov.cn" target="_blank">陕ICP备15007188号-2</a></p>
     <p>Copyright ©2015-<script>document.write((new Date().getFullYear()))</script> by <a target="_blank" href="https://github.com/nortonlee/">Norton Li</a></p>
 </div>
